Agrego validaciones corregidas