@@ -3,31 +3,39 @@ package com.Ospuaye.BackendOspuaye.Service;
 import com.Ospuaye.BackendOspuaye.Entity.Area;
 import com.Ospuaye.BackendOspuaye.Repository.AreaRepository;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class AreaService extends BaseService<Area, Long> {
 
-    private final AreaRepository repository;
+    private final AreaRepository areaRepository;
 
     public AreaService(AreaRepository repository) {
         super(repository);
-        this.repository = repository;
+        this.areaRepository = repository;
     }
 
     @Override
-    @Transactional
-    public Area crear(Area a) throws Exception {
-        if (a == null) throw new Exception("Área no puede ser nula");
-        if (a.getNombre() == null || a.getNombre().trim().isEmpty()) throw new Exception("Nombre de área obligatorio");
-        return repository.save(a);
+    public Area crear(Area area) throws Exception {
+        if (area.getNombre() == null || area.getNombre().isBlank()) {
+            throw new Exception("El nombre del área es obligatorio");
+        }
+        if (areaRepository.findByNombre(area.getNombre()).isPresent()) {
+            throw new Exception("Ya existe un área con ese nombre");
+        }
+        return areaRepository.save(area);
     }
 
     @Override
-    @Transactional
-    public Area actualizar(Area a) throws Exception {
-        if (a == null || a.getId() == null) throw new Exception("ID obligatorio");
-        if (!repository.existsById(a.getId())) throw new Exception("Área no encontrada");
-        return crear(a);
+    public Area actualizar(Area area) throws Exception {
+        if (area.getId() == null || !areaRepository.existsById(area.getId())) {
+            throw new Exception("Área no encontrada");
+        }
+        if (area.getNombre() != null && !area.getNombre().isBlank()) {
+            var existente = areaRepository.findByNombre(area.getNombre());
+            if (existente.isPresent() && !existente.get().getId().equals(area.getId())) {
+                throw new Exception("El nombre de área ya está en uso");
+            }
+        }
+        return areaRepository.save(area);
     }
 }
